--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -39,25 +39,31 @@
                 <StackPanel Style="{DynamicResource ControlPanelStackPanelStyle}">
                     <Button 
                         Style="{DynamicResource RollupControlButton}" 
-                        x:Name="Rollup_Button" 
-                        Click="Rollup_Button_Click"/>
+                        x:Name="RollupButton" 
+                        Click="RollupButton_Click"/>
                     <Button 
                         Style="{DynamicResource CloseControlButton}"
-                        x:Name="Close_Button"
-                        Click="Close_Button_Click"/>
+                        x:Name="CloseButton"
+                        Click="CloseButton_Click"/>
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="1">
                 <Grid>
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                        <Image
-                            Source="\ContentFolder\ImageFolder\Icon_DesctopHITE.png"
-                            VerticalAlignment="Top"
-                            HorizontalAlignment="Center"
-                            Margin="0 10 0 10"
-                            Height="150"
-                            Width="150"/>
-                        <Grid Margin="0 10 0 10">
+                        <TextBlock
+                            Text="HTRE"
+                            Margin="0 0 0 20"
+                            FontSize="100"
+                            Style="{StaticResource MainStyleTextBlock}"
+                            FontFamily="\ContentFolder\FontFolder\#Rubik Wet Paint">
+                            <TextBlock.Foreground>
+                                <LinearGradientBrush EndPoint="0.45,1" StartPoint="0.5,0">
+                                    <GradientStop Color="#f5f5f5"/>
+                                    <GradientStop Color="#462AD8" Offset="1"/>
+                                </LinearGradientBrush>
+                            </TextBlock.Foreground>
+                        </TextBlock>
+                        <Grid Margin="0 20 0 10">
                             <Border Style="{DynamicResource ShadowBorder}">
                                 <Border.Effect>
                                     <DropShadowEffect 
@@ -84,7 +90,7 @@
                                 Text="LOGIN"
                                 Style="{DynamicResource HintTextBlockStyle}"/>
                         </Grid>
-                        <StackPanel Orientation="Vertical" Margin="0 10 0 20">
+                        <StackPanel Orientation="Vertical" Margin="0 10 0 5">
                             <Grid>
                                 <Border Style="{DynamicResource ShadowBorder}">
                                     <Border.Effect>
@@ -157,7 +163,32 @@
                                 Text="CapsLock"
                                 Style="{StaticResource HintTextBlockStyle}"/>
                         </StackPanel>
-                        <Grid Margin="0 20 0 0">
+                        <Grid HorizontalAlignment="Right" Margin="0 5 0 10">
+                            <Border Height="28" Width="158" Style="{DynamicResource ShadowBorder}">
+                                <Border.Effect>
+                                    <DropShadowEffect 
+                                        Direction="315"
+                                        Color="{DynamicResource ShadowColor}"
+                                        BlurRadius="5"
+                                        ShadowDepth="2"
+                                        Opacity="0.5"
+                                        RenderingBias="Performance"/>
+                                </Border.Effect>
+                            </Border>
+                            <ComboBox
+                                Text="Не запоминать меня"
+                                x:Name="RememberUserComboBox"
+                                Height="30"
+                                Width="160">
+                                <ComboBoxItem x:Name="RememberItem">
+                                    <TextBlock Text="Запомнить меня"/>
+                                </ComboBoxItem>
+                                <ComboBoxItem x:Name="NoRememberItem">
+                                    <TextBlock Text="Не запоминать меня"/>
+                                </ComboBoxItem>
+                            </ComboBox>
+                        </Grid>
+                        <Grid Margin="0 10 0 0">
                             <Border
                                 Width="220"
                                 Height="50" 
