--- a/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
@@ -26,6 +26,7 @@
             <StackPanel Margin="5 10" Orientation="Vertical" VerticalAlignment="Center">
                 <!--Приветствие пользователя-->
                 <TextBlock
+                    Text="Loading..."
                     Padding="10 5"
                     Background="#462AD8"
                     TextAlignment="Center"
@@ -68,17 +69,39 @@
                     FontSize="25"/>
             </StackPanel>
         </Border>
-        <ListView
-            Width="420"
+        <Border
+            VerticalAlignment="Top"
+            x:Name="TitleTodayTheBirthdayBorder"
+            BorderBrush="#202020" 
+            Style="{DynamicResource BorderInformation}"
+            Margin="5"
             HorizontalAlignment="Left"
-            ItemContainerStyle="{StaticResource ListViewItemSelected}"
-            Background="Transparent"
-            x:Name="EmployeesWhoHaveBirthdayToday">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <UserControl:ListWorkerBirthdayControl/>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            Width="450"
+            Height="auto"
+            MinHeight="0"
+            MaxHeight="295">
+            <StackPanel Orientation="Vertical">
+                <TextBlock 
+                    Margin="0 5 0 2.5"
+                    x:Name="TitleTodayTheBirthdayTextBlock"
+                    FontSize="15"
+                    Style="{DynamicResource MainStyleTextBlock}"/>
+                <ListView
+                    MinHeight="0"
+                    MaxHeight="260"
+                    Height="auto"
+                    Margin="5 2.5 5 5"
+                    Width="435"
+                    ItemContainerStyle="{StaticResource ListViewItemSelected}"
+                    Background="Transparent"
+                    x:Name="EmployeesWhoHaveBirthdayToday">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <UserControl:ListWorkerBirthdayControl/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
