--- a/DesctopHITE/PerformanceFolder/UserControlFolder/ListWorkerControl.xaml
+++ b/DesctopHITE/PerformanceFolder/UserControlFolder/ListWorkerControl.xaml
@@ -5,10 +5,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d" 
-    IsVisibleChanged="UserControl_IsVisibleChanged"
     Height="250"
     Width="200">
-    <Border CornerRadius="10" Background="#2a2a2a" BorderBrush="Transparent" BorderThickness="0">
+    <Border CornerRadius="10" BorderBrush="Transparent" BorderThickness="0">
         <Border.Effect>
             <DropShadowEffect 
                 Direction="315"
@@ -34,12 +33,12 @@
                             <VisualBrush Visual="{Binding ElementName=MaskMorderBorder}"/>
                         </StackPanel.OpacityMask>
                         <Image 
-                            Height="145"
-                            Width="145"
-                            Stretch="Uniform"
+                            Height="150"
+                            Width="150"
+                            Stretch="UniformToFill"
                             Opacity="1"
                             x:Name="UserImage" 
-                            Source="{Binding PassportTable.Image_Passport}"/>
+                            Source="{Binding PassportTable.ImagePassportTable.Image_ImagePassport}"/>
                     </StackPanel>
                 </Grid>
                 <StackPanel Margin="0 10 0 2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
