--- a/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ListWorkerPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/WorkerPageFolder/ListWorkerPage.xaml
@@ -62,12 +62,11 @@
                     Style="{DynamicResource DeliteButtonStyle}"
                     x:Name="DeliteButton"
                     Click="DeliteButton_Click"
-                    Margin="5 0 0 0"
                     Width="180"
                     Height="45">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock
-                            Text="&#xf154;" 
+                            Text="&#xF154;" 
                             Style="{DynamicResource IconTextBlockStyle}"
                             Margin="0 0 5 0"/>
                         <TextBlock
