--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -14,12 +14,16 @@
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid
-                x:Name="SpaseBarGrid"
-                MouseDown="SpaseBarGrid_MouseDown"
-                Background="Transparent">
-                <Polygon 
-                    Points="200,0, 230,15, 600,15, 630,0" 
+            <Grid Background="Transparent">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="430"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Polygon
+                    HorizontalAlignment="Center"
+                    Grid.Column="1"
+                    Points="0,0, 30,15, 400,15, 430,0" 
                     x:Name="PoligonName"
                     Fill="#2a2a2a"
                     Opacity="1">
@@ -34,9 +38,10 @@
                     </Polygon.Effect>
                 </Polygon>
                 <TextBlock
+                    Grid.Column="0"
                     Style="{DynamicResource ControlPanelTextBlockStyle}"
                     Text="АВТОРИЗАЦИЯ"/>
-                <StackPanel Style="{DynamicResource ControlPanelStackPanelStyle}">
+                <StackPanel Grid.Column="22" Style="{DynamicResource ControlPanelStackPanelStyle}">
                     <Button 
                         Style="{DynamicResource RollupControlButton}" 
                         x:Name="RollupButton" 
